src/objects/FieloPLT__Program__c.object
<CustomObject>
    <fields>
        <fullName>ProductInjectQuery__c</fullName>
        <label>Product Inject Query</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RequestInvoiceAuthorization__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When on, Invoices uploaded by Members will have to be approved before being processed for points rewarding.</description>
        <inlineHelpText>When on, Invoices uploaded by Members will have to be approved before being processed for points rewarding.</inlineHelpText>
        <label>Request Invoice Authorization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RequestInvoiceProducts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When on, Members will be asked to itemize the products on the Invoices they upload.</description>
        <inlineHelpText>When on, Members will be asked to itemize the products on the Invoices they upload.</inlineHelpText>
        <label>Request Invoice Products</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>